--- a/index.html
+++ b/index.html
@@ -6,14 +6,25 @@
 	<title>My first website!!</title>
 </head>
 <body>
-	<h1>OH HI THERE :D</h1>
-	<h2>OH HI THEERREE :D</h2>
-	<h6>OH HI THEREEEE :D</h6>
-	<p>OH HI :D</p>
-	<p>OH HI :D</p>
-	<p>He had <em>three</em> simple rules by which he lived. The first was to never eat blue food. There was nothing in nature that was edible that was blue. People often asked about blueberries, but everyone knows those are actually purple. He understood it was one of the stranger rules to live by, but it had served him well thus far in the 50+ years of his life.</p>
-	<p>He had <em>three</em> simple rules by which he lived. The first was to never eat blue food. There was nothing in nature that was edible that was blue. People often asked about blueberries, but everyone knows those are actually purple. He understood it was one of the stranger rules to live by, but it had served him well thus far in the 50+ years of his life.</p>
-	<p>He had <em>three</em> simple rules by which he lived. The first was to never eat blue food. There was nothing in nature that was edible that was blue. People often asked about blueberries, but everyone knows those are actually purple. He understood it was one of the stranger rules to live by, but it had served him well thus far in the 50+ years of his life.</p>
+	<ul>
+		<li>watermelon</li>
+		<ul>
+			<li>red-flesh watermelon</li>
+		</ul>
+		<li>pineapple</li>
+		<li>orange</li>
+		<ul>
+			<li>blue-flesh orange</li>
+		</ul>
+		<li>kiwi</li>
+		<ul>
+			<li>green kiwi</li>
+		</ul>
+		<li>grape</li>
+		<ul>
+			<li>violet grape</li>
+		</ul>
+	</ul>
 
 </body>
 </html>
