--- a/index.html
+++ b/index.html
@@ -6,24 +6,34 @@
 	<title>My first website!!</title>
 </head>
 <body>
+	<a href="newpage.html">New Page</a>
 	<ul>
 		<li>watermelon</li>
 		<ul>
 			<li>red-flesh watermelon</li>
-		</ul>
+			<img src="https://www.foodrepublic.com/img/gallery/watermelon-didnt-always-have-its-vibrant-red-flesh/l-intro-1699324222.jpg" width="42" height="42">
+		</ul><br><hr>
 		<li>pineapple</li>
+		<img src="https://images.immediate.co.uk/production/volatile/sites/30/2017/07/pineapple-6ee23f3.jpg?quality=90&resize=556,505" width="42" height="42">
+		<br><hr>
 		<li>orange</li>
 		<ul>
 			<li>blue-flesh orange</li>
 		</ul>
+		<img src="https://as1.ftcdn.net/v2/jpg/03/10/10/12/1000_F_310101290_IBCfPM8odj9znwQznwpEMDU20j3mr3k0.jpg" width="42" height="42">
+		<br><hr>
 		<li>kiwi</li>
 		<ul>
 			<li>green kiwi</li>
 		</ul>
+		<img src="https://cdn.britannica.com/45/126445-050-4C0FA9F6/Kiwi-fruit.jpg" width="42" height="42">
+		<br><hr>
 		<li>grape</li>
 		<ul>
 			<li>violet grape</li>
 		</ul>
+		<img src="https://www.shutterstock.com/image-photo/ripe-grapes-isolated-on-white-260nw-210742753.jpg" width="42" height="42">
+		<br><hr>
 	</ul>
 
 </body>
