--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@
 <head>
 	<title>CSS</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header>
@@ -16,7 +19,7 @@
 	</header>
 	<section>
 		<h2>About</h2>
-		<p>Lorem ipsum.</p>
+		<p>Lorem ipsum.Here is a fun little game for you to practice your CSS Selectors. This is a new exercise that is only optional for you to practice what you just learned, however, if you want to keep going to the next video, you can always come back to this at the end of the course. Keep in mind that there may be things in here that you have yet to learn and you have to google to learn yourself. Use this as an exercise in learning how to search for answers which is something you will have to do a lot of in your career (are you tired of me saying this yet?!) Enjoy!</p>
 	</section>
 </body>
 </html>
